--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,21 @@
 {
+    "editor.formatOnSave": true,
     "files.insertFinalNewline": true,
-    "prettier.tabWidth": 4,
-    "[markdown]": {
-        "editor.wordWrap": "on",
-        "editor.quickSuggestions": false,
-        "editor.formatOnSave": true,
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
     "[glua]": {
         "editor.formatOnSave": false, // Disable formatting, to prevent glualint from doing it.
         "editor.formatOnPaste": false,
         "editor.formatOnType": false
     },
+    "[markdown]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
     "[json]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.formatOnSave": true
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[jsonc]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.formatOnSave": true
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[yml]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     }
 }
