Try adding glualint matcher for PR annotations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,6 @@ jobs:
           unzip glualint.zip
 
       - name: Run glualint
-        run: ./glualint .
+        run: |
+          echo ::add-matcher:.github/workflows/glualint-matcher.json
+          ./glualint .
