Fix add-matcher typo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,5 +26,5 @@ jobs:
 
       - name: Run glualint
         run: |
-          echo ::add-matcher:.github/workflows/glualint-matcher.json
+          echo "::add-matcher::.github/workflows/glualint-matcher.json"
           ./glualint .
